contrast + social icons corrections on contact page (Accessibility)

--- a/website_with_recommendations/style.css
+++ b/website_with_recommendations/style.css
@@ -655,7 +655,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000000!important;
 }
 
 .container {
@@ -726,10 +726,6 @@ h3 {
     box-shadow: 0px 0px 0px #000000;
 }
 
-h1 {
-    color: #333333!important;
-}
-
 h4 {
     color: #333333!important;
 }
@@ -779,18 +775,6 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
-}
-
-.text-banner {
-    color: #FFFFFF!important;
-}
-
-.text-footer {
-    color: #000000!important;
-}
-
-.txt-banniere {
     color: #FFFFFF!important;
 }
 
